Remove unsafe completely.

--- a/examples/cross-platform/wasm/index.html
+++ b/examples/cross-platform/wasm/index.html
@@ -4,7 +4,7 @@
   </head>
   <body>
     <script type="module">
-        import init from './app/cross-platform.js';
+        import init from './app/prg.js'; //cross-platform.js';
         init();
     </script>
   </body>
