--- a/examples/cross-platform/wasm/index.html
+++ b/examples/cross-platform/wasm/index.html
@@ -1,10 +1,11 @@
 <html>
   <head>
     <meta content="text/html;charset=utf-8" http-equiv="Content-Type"/>
+    <link rel="icon" href="icon.svg">
   </head>
   <body>
     <script type="module">
-        import init from './app/prg.js'; //cross-platform.js';
+        import init from './app/glue.js';
         init();
     </script>
   </body>
